--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Create Terraform plugin cache dir
         run: mkdir --parents $TF_PLUGIN_CACHE_DIR
 
+      - name: Cache Terraform Providers
+        uses: terraform-cache/terraform-cache@v1
+
       - name: Setup pipenv
         run: python -m pip install --upgrade pipenv wheel
 
@@ -67,10 +70,6 @@ jobs:
         run: make install_ci
         env:
           PIPENV_DEV: true
-      - id: cache-terraform-providers
-        uses: actions/cache@v4
-        with:
-          path: $TF_PLUGIN_CACHE_DIR
-          key: ${CI_PROJECT_DIR}/plugin-cache
+
       - name: Test
         run: make test
